power: Do not overflow when pressing the keyboard brightness down button

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=670116